// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#01bba5",
          "borderRadius": 2,
          "justifyContent": "center",
          "padding": 10,
        },
        Object {
          "backgroundColor": "#ca0000",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      Google Sign in
    </Text>
  </View>
</View>
`;

exports[`renders as expected while loading 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#01bba5",
        "borderRadius": 2,
        "justifyContent": "center",
        "padding": 10,
      },
      Object {
        "backgroundColor": "#ca0000",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#fff",
          "fontWeight": "bold",
        },
        undefined,
      ]
    }
  >
    Logging in...
  </Text>
</View>
`;
